@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-18T01:58:57Z",
-  "count" : 3,
+  "timestamp" : "2022-10-01T08:23:15Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
