@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-01T01:59:16Z",
+  "timestamp" : "2022-10-01T08:23:15Z",
   "count_outdated" : 552,
   "uniques_outdated" : 318,
-  "count" : 584,
-  "uniques" : 334,
+  "count" : 586,
+  "uniques" : 336,
   "clones" : [
     {
       "timestamp": "2022-09-17T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
@@ -102,6 +102,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-01T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
