@@ -1,10 +1,10 @@
 {
-  "count": 32,
-  "uniques": 3,
+  "count": 34,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2022-09-17T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 2
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2022-09-30T00:00:00Z",
       "count": 3,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-01T00:00:00Z",
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
