@@ -1,3 +1,11 @@
+2022-10-01T08:23:15Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3163814721
+* notice: last 14d: unq all: 4 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 318 552 / 334 584
+* notice: next accum: outdated-unq outdated-all / unq all: 318 552 / 336 586
+* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -1 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2022-09-17 2022-10-01]
+
 2022-10-01T01:59:16Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3162762258
 * notice: last 14d: unq all: 3 32
